--- a/index.html
+++ b/index.html
@@ -12,22 +12,12 @@
         <option value="robinia">Robinia akacjowa</option>
         <option value="lipa">Lipa</option>
       </select>
-
-
-      <!-- <div class="dolnyslask">śląsk</div>
-      <div class="malopolska">małopolska</div>
-      <div class="wielkopolska">wielkopolska</div>
-      <div class="opole">opole</div>
-      <div class="mazowsze">mazowsze</div>
-      <div class="gornyslask">śląsk</div>
-      <div class="swietokrzyskie">świętokrzyskie</div><br><br><br> -->
     <div class="sliderContainer">
         <input type="range" id="timeSelect" name="timeSelect" 
-               min="0" max="365" value="40" class="slider">
+               min="0" max="365" class="slider">
         <label for="timeSelect">Czas</label>
       </div>
     <div class="showTime">
-            40 dzień
     </div>
     <svg version="1.1"
 	 id="mapSvg" inkscape:output_extension="org.inkscape.output.svg.inkscape" inkscape:version="0.45.1" sodipodi:docbase="C:\Dokumente und Einstellungen\mart\Desktop" sodipodi:docname="Woiwodschaften.svg" sodipodi:version="0.32" xmlns:cc="http://web.resource.org/cc/" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="#" xmlns:svg="http://www.w3.org/2000/svg"
@@ -35,7 +25,7 @@
 	 style="enable-background:new 0 0 2061 2059.7;" xml:space="preserve">
 
 
-<path id="asd" class="opole" d="M549.9,111l3.9,19.4l10,5.8l0.6,18.8l3.4,13l-7-1l0.1,10l-3.1,11l7,1c0,5.5,1.6,13.1-3.1,17.1
+<path id="asd" class="wojewodztwo opole" d="M549.9,111l3.9,19.4l10,5.8l0.6,18.8l3.4,13l-7-1l0.1,10l-3.1,11l7,1c0,5.5,1.6,13.1-3.1,17.1
 	c-6.2,5.2-19.1,2-21.5,12c-1.6,6.6,2.4,9.3,3.8,14.9c3.4,13.4,10.8,27,12.7,41c0.9,6.4-4.3,11.9-5.2,18c-0.7,4.4,2.3,8.8,3.4,13
 	c5.4-0.9,5.4-6.7,8-11h1c2.3,4.7,0.9,9.4,2.9,13.9c2.8,6.4,12.6,11.4,19.1,12.1c0.6,4.7,4,12.3,0.3,16.4c-5.3,5.8-17-0.3-20.8,8.6
 	c-2.7,6.3,7.4,11,7.6,18h7c-2,7.8-11.5,11.6-12.9,19c-1.7,9.4,10.8,22.8,4.9,32l10,32c2.5-0.4,6.6-2.6,9-1.1c3.1,2,1,6,3,8.5
@@ -51,7 +41,7 @@
 	c-1.4-9.5-7.6-14.9-6.8-25h-1c-10.5,9.4-6.6-15.6-8.6-19c-3.2-5.2-10.5-7.6-11.9-14c-1.3-5.9,3.4-10.7,1.5-17l15,8.6l31.6,22.9
 	l14,8.6l16.4,24c0-31.7-44.7-49.2-68-63.2c-8.1-4.9-16.1-16.4-25-18.4c-13-3-29.5,3-43,3c-3.5,0-6.6-1.9-10-1.7
 	c-25.6,1.4-50.4,12.5-75,18.4c-31.3,7.5-62.6,11.2-92,25.2c-18.5,8.8-30.6,25.3-48,35.1C575,106.5,560.1,109.5,549.9,111z"/>
-<path id="path12" class="dolnyslask" d="M158.9,270c3.1,0.4,9-2.6,11.5-0.3c2.6,2.5-1.7,5.7-3,7.5c-5.2,6.8-4.4,16.8-4.4,24.8
+<path id="path12" class="wojewodztwo dolnyslask" d="M158.9,270c3.1,0.4,9-2.6,11.5-0.3c2.6,2.5-1.7,5.7-3,7.5c-5.2,6.8-4.4,16.8-4.4,24.8
 	c-17.3-3.6-28.3,17.5-30.7,33c-1.4,8.8,0.2,21.8-12.3,19c-1.7,5.7-6.1,20.5-1,25c-1.2,3.9-0.9,13.3,4,14l-2.2,9.4l-11.1-17
 	l-25.5-11.9L68.9,356c-1.6,7.1-1.3,12.5-9,15c2.7,11.1,5.1,23.6,5.9,35c0.4,5.8-1.4,12.4-0.1,18c1.6,6.8,7.1,12.1,8.6,19
 	c3.4,15,3.1,30.7,5.7,46c1.3,8,6.5,17.8,4.4,26c-1.8,7-9.7,10.8-11.8,18c-2.2,7.6,0.4,15.4,0,23c-0.6,9.8-6.8,19.3-12.6,27
@@ -70,7 +60,7 @@
 	l4-23l8,1l-4.1-12l-0.5-18.7l-9.7-5l-4.7-19.3c-13.2,0-26.9-0.7-39,5.4c-19.2,9.6-28.7,28.1-40.9,44.6c-11.7,16-25.4,28.9-43.1,38
 	c-17.9,9.2-36.4,4.4-55,8.4c-17.8,3.8-35.1,12-53,16.1c-10.3,2.3-21.9,1.4-32,4c-18.4,4.8-35.4,13.7-54,18.6
 	c-13.8,3.6-27.2,10.2-41,13.4C180.9,262.8,167.4,263.6,158.9,270z"/>
-<path id="path14" class="swietokrzyskie" d="M1705.9,160v1c4.1,4.4,6.9,8.1,2,13c4.3,15.1-16.4,18.4-27,16l-21.6,13.3l-7.4,11.7v2
+<path id="path14" class="wojewodztwo swietokrzyskie" d="M1705.9,160v1c4.1,4.4,6.9,8.1,2,13c4.3,15.1-16.4,18.4-27,16l-21.6,13.3l-7.4,11.7v2
 	c5.8,4,7.3,10.6,12,15.4c2.2,2.2,5.4,0.4,8,1.6c3.9,1.9,6.4,8,7.2,12c1,5.3-5.3,9.6-3,14.9c1.5,3.4,5.8,4.6,8.2,7.3
 	c5,5.9,6.8,14.4,11.2,20.8c3.8,5.5,11.5,11.4,13.1,18c3.8,15.1-6.4,20.9-10.9,33c-1.9,4.9,0.3,11.6-0.8,17c-8.9-2.5-23.5,11.9-22,21
 	l-8-2c-2.3,7.9-6.2,9-14,9l-2,17c-13-8.1-17,3.6-26.7,11.3c-11.5,9-19.5,21.2-31.3,29.8c-5.7,4.2-14.8,4.7-19.5,8.7
@@ -89,7 +79,7 @@
 	c-2.3-4.2-6.9-7.2-7.9-12c-1.7-8.2,6.6-14.4,7.7-22c1.1-7.2-4.5-18.4-7.3-25c-3.4-8-8.7-11-13.1-17.4c-5.2-7.5-7-15.6-16-20.4
 	c-6.4-3.5-14.6-1.6-20.9-5.1c-6.6-3.6-12.6-9.6-19.3-12.8c-4.4-2.1-9.2,2.2-13.5-1c-3.6-2.7-2-7.6-5-10.4c-2.7-2.6-7.1-1.4-9.9-3.7
 	c-2.3-1.9-1.8-5.2-3.9-7.1c-2.6-2.4-7.1-2-10.4-2.8C1720.3,154.8,1714.8,151,1705.9,160z"/>
-<path id="path16" class="malopolska" d="M1131.9,156l-11,10l-20,22l-19,2l-16,14l-14,22l-3,2l8-20c-3.2,1.1-4.6,4.8-8,5.3
+<path id="path16" class="wojewodztwo malopolska" d="M1131.9,156l-11,10l-20,22l-19,2l-16,14l-14,22l-3,2l8-20c-3.2,1.1-4.6,4.8-8,5.3
 	c-4.2,0.6-13.6-5.5-16.8-0.7c-4.5,6.8,9.2,15.4,7.2,22.3c-1.5,5.1-8.6,4-11.1,8.3c-5.2,8.6-2.3,18.5-3.2,27.3
 	c-0.3,2.7-3.5,5.2-1.9,7.9c2.3,3.9,9.4,5.5,12.9,8.5c-2,1-6.2,4.7-1.9,6.3c5.3,1.9,16.6-0.4,19.5,8c1.8,5.3-6.5,13.7,1.5,17.2
 	c4.7,2.1,10.4-2.6,14.9-3.7c5.3-1.3,11.5,0.2,17,0.2l1,9l-6-1c0,9.1-3.1,17.7-6.8,26c-1.7,3.9-5.9,6.8-3.2,11v1c-3.1,3.3-3.1,6-1,10
@@ -107,8 +97,8 @@
 	c5.5-0.5,14.1-3.4,18.8-6.2c2.4-1.4,3.6-4.4,6.3-5.3c10-3.3,30.3,0.1,24.9-17.5c5.7-3.2,2.9-8.6-2-11c-5,11.1-21.1,6.1-31,7.3
 	c-32.8,3.9-66.1,4-99,8c-45.4,5.6-92.3,11.5-138,12.6c-7.2,0.2-14.7-2.3-22-2.8c-25.1-1.7-49.9-2.5-75-4.9
 	c-58.8-5.6-118.5-8.5-177-17.5C1152.6,163.1,1142.4,158.1,1131.9,156z"/>
-<path id="path36" class="gornyslask" d="M80.9,316h6l-2-5L80.9,316z"/>
-<path id="path68" class="wielkopolska" d="M800.9,374c0,4.7-0.4,7.8-4,11l1,5l-6,5l-13-7l-2-7c-5.4,2.4-15.5-2.5-17,3
+<path id="path36" class="wojewodztwo gornyslask" d="M80.9,316h6l-2-5L80.9,316z"/>
+<path id="path68" class="wojewodztwo wielkopolska" d="M800.9,374c0,4.7-0.4,7.8-4,11l1,5l-6,5l-13-7l-2-7c-5.4,2.4-15.5-2.5-17,3
 	c15.9,4.6,2.8,18.2-7,20.5c-5.6,1.3-9.2-3.4-15-2.5l3,14.3l9,6.7l-3,4l-6,6l-8-6c-3.5,4.2-6.9,3.2-12,3c2.2,4.8,3.7,8.9-3,10l-8-10
 	h-1c-5,5.8-8,4.3-15,4l-1-11c-6.7-0.3-13.7,5.7-16.3,12c-4,9.9-2.5,21.8-8,31.9c-3.5,6.4-10.9,10.3-15.2,16.1
 	c-3.2,4.2-1,9.4-3.5,13.6c-2.4,4.1-6.9,5.8-9,10.3c10.9,1.8,16.2,14.3,22.1,22c2.4,3.1,8.3,8.2,8.9,12.1c0.4,3-1.3,9.2-2.9,11.7
