add time conversion

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Porzytki pszczele w Polsce</title>
+    <title>Pozytki pszczele w Polsce</title>
 </head>
 <body>
     <select id="plantSelect">
@@ -13,6 +13,7 @@
         <option value="lipa">Lipa</option>
       </select>
     <div class="sliderContainer">
+		<div class="odcinek"></div>
         <input type="range" id="timeSelect" name="timeSelect" 
                min="0" max="365" class="slider">
         <label for="timeSelect">Czas</label>
