add button states and menu reveal

--- a/index.html
+++ b/index.html
@@ -12,42 +12,7 @@
 </head>
 <body>
 	<aside>
-		<div class="plantSelector">
-
-			<ul>
-				<li>Lipa Drobnolistna</li>
-				<li>Lipa Szerokolistna</li>
-				<li>Robinia akacjowa</li>
-				<li>Jabłoń</li>
-				<li>Malina wczesna</li>
-				<li>Malina późna</li>
-				<li>Milin</li>
-				<li>Lipa Drobnolistna</li>
-				<li>Lipa Szerokolistna</li>
-				<li>Robinia akacjowa</li>
-				<li>Jabłoń</li>
-				<li>Malina wczesna</li>
-				<li>Malina późna</li>
-				<li>Milin</li>
-				<li>Lipa Drobnolistna</li>
-				<li>Lipa Szerokolistna</li>
-				<li>Robinia akacjowa</li>
-				<li>Jabłoń</li>
-				<li>Malina wczesna</li>
-				<li>Malina późna</li>
-				<li>Milin</li>
-				<li>Lipa Drobnolistna</li>
-				<li>Lipa Szerokolistna</li>
-				<li>Robinia akacjowa</li>
-				<li>Jabłoń</li>
-				<li>Malina wczesna</li>
-				<li>Malina późna</li>
-				<li>Milin</li>
-
-
-
-			</ul>
-		</div>
+		
 		<!-- Navigation -->
 		<nav>
 			<a href="#">
@@ -100,8 +65,44 @@ pszczelich <span>ver.1.0</span>
 			</div>
 		</div>
 		<article>
-			<button class="plantSelectButton">Wybierz pożytek 
+			<button class="plantSelectButton" >Wybierz pożytek 
 				<i class="fas fa-sort-down"></i>
+				<div class="plantSelector">
+
+			<ul>
+				<a href="#"><li>Lipa Drobnolistna</li></a>
+				<li>Lipa Szerokolistna</li>
+				<li>Robinia akacjowa</li>
+				<li>Jabłoń</li>
+				<li>Malina wczesna</li>
+				<li>Malina późna</li>
+				<li>Milin</li>
+				<li>Lipa Drobnolistna</li>
+				<li>Lipa Szerokolistna</li>
+				<li>Robinia akacjowa</li>
+				<li>Jabłoń</li>
+				<li>Malina wczesna</li>
+				<li>Malina późna</li>
+				<li>Milin</li>
+				<li>Lipa Drobnolistna</li>
+				<li>Lipa Szerokolistna</li>
+				<li>Robinia akacjowa</li>
+				<li>Jabłoń</li>
+				<li>Malina wczesna</li>
+				<li>Malina późna</li>
+				<li>Milin</li>
+				<li>Lipa Drobnolistna</li>
+				<li>Lipa Szerokolistna</li>
+				<li>Robinia akacjowa</li>
+				<li>Jabłoń</li>
+				<li>Malina wczesna</li>
+				<li>Malina późna</li>
+				<li>Milin</li>
+
+
+
+			</ul>
+		</div>
 			</button>
 
 			<button class="timeSelectButton">
